--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.4.2
 Django==2.2.8
 django-crispy-forms==1.9.1
 django-environ==0.4.5
+gunicorn==20.0.4
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
