--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 asgiref==3.2.10
 astroid==2.4.2
+dj-database-url==0.5.0
 Django==2.2.8
 django-crispy-forms==1.9.1
 django-environ==0.4.5
+django-heroku==0.3.1
 gunicorn==20.0.4
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pylint==2.5.3
 pypi==2.1
@@ -14,4 +17,5 @@ pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
+whitenoise==5.1.0
 wrapt==1.12.1
